# ParkingE2E

./: .gitignore  README.md  e2e_dataset  environment.yaml  ros_inference.py  train.py
catkin_ws/src/avm/: CMakeLists.txt  package.xml
catkin_ws/src/avm/benchmark_data/: param0.yaml  param1.yaml  param2.yaml  param3.yaml
catkin_ws/src/avm/include/: fisheye_avm.hpp
catkin_ws/src/avm/launch/: avm_nodelet.launch
catkin_ws/src/avm/plugins/: nodelet_plugins.xml
catkin_ws/src/avm/src/: avm_nodelet.cpp  fisheye_avm.cpp
catkin_ws/src/core/: CMakeLists.txt  package.xml
catkin_ws/src/core/config/: back.yaml  front.yaml  left.yaml  params.yaml  right.yaml
catkin_ws/src/core/launch/: driven_core.launch
catkin_ws/src/core/msg/: LocalizationEstimate.msg
catkin_ws/src/core/rviz/: visual_BEV.rviz
catkin_ws/src/core/scripts/: e2e_traj_show.py
catkin_ws/src/image_to_rviz/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/image_to_rviz/include/image_to_rviz/: LocalizationEstimate.h
catkin_ws/src/image_to_rviz/launch/: image_to_rviz.launch
catkin_ws/src/image_to_rviz/src/: image_to_rviz.cpp
catkin_ws/src/undistort/: CMakeLists.txt  package.xml
catkin_ws/src/undistort/launch/: undistort.launch
catkin_ws/src/undistort/scripts/: undistort.py
config/: inference_real.yaml  training_real.yaml
dataset_interface/: dataloader.py  dataset_interface.py  dataset_real.py
fisheye_undistort/: fish_cam_process.py  fish_eye_camera.py
fisheye_undistort/para/back/: calib_results_back.txt
fisheye_undistort/para/front/: calib_results_front.txt
fisheye_undistort/para/left/: calib_results_left.txt
fisheye_undistort/para/right/: calib_results_right.txt
loss/: traj_point_loss.py
model_interface/: inference_real.py  model_interface.py  trainer_real.py
model_interface/model/: bev_encoder.py  gru_trajectory_decoder.py  lss_bev_model.py  parking_model_real.py  trajectory_decoder.py
toolkit/: dataset_generation.py  planning_ui.py
utils/: bev_utils.py  camera_config_right_hand.json  camera_utils.py  common.py  config.py  decorator_train.py  fix_libtiff.py  keyboard_command.py  metrics.py  pose_utils.py  ros_interface.py  traj_post_process.py  trajectory_utils.py
utils/msg/: _LocalizationEstimate.py
